--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
-    "python.pythonPath": "C:\\Python38\\python.exe"
+    "python.pythonPath": "C:\\Users\\Zin\\AppData\\Local\\Programs\\Python\\Python36-32\\python.exe",
+    "python.linting.flake8Enabled": false
 }
